tests/samples/0104/error.txt
error[P0033]: invalid constant initialization expression
  --> 0104/code.ara:2:7
  |
2 | #[Baz(...BAZ)]
  |       ^^^^^^

error[P0033]: invalid constant initialization expression
  --> 0104/code.ara:4:16
  |
4 |     Bar $bar = new Bar(...BAZ),
  |                ^^^^^^^^^^^^^^^

error[P0033]: invalid constant initialization expression
  --> 0104/code.ara:7:7
  |
7 | #[Bar(...BAZ)]
  |       ^^^^^^

error[P0033]: invalid constant initialization expression
  --> 0104/code.ara:9:16
  |
9 |     Bar $bar = new Bar(BAZ...),
  |                ^^^^^^^^^^^^^^^

error: failed to parse "0104/code.ara" due to the above issue(s)
 = summary: 4 error(s)

